added firebase config

--- a/register.html
+++ b/register.html
@@ -28,7 +28,10 @@
   </p>
 </div>
 
-<script src="script.js"></script>
-<script src="register.js"></script>
+<!-- <script src="script.js"></script>
+<script src="register.js"></script> -->
+<script type="module" src="firebase.js"></script>
+<script type="module" src="register.js"></script>
+
 </body>
 </html>
