--- a/index.html
+++ b/index.html
@@ -263,7 +263,9 @@
         </div>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script type="module" src="script.js"></script>
+
 </body>
 </html>
 
