--- a/signin.html
+++ b/signin.html
@@ -25,7 +25,10 @@
   </p>
 </div>
 
-<script src="script.js"></script>
-<script src="signin.js"></script>
+<!-- <script src="script.js"></script>
+<script src="signin.js"></script> -->
+<script type="module" src="firebase.js"></script>
+<script type="module" src="signin.js"></script>
+
 </body>
 </html>
